# GSoC-poc

./: .gitignore  LICENSE  README.md  cli.py  main.py  pyproject.toml  requirements.txt  setup.py
docs/: conf.py  index.rst
examples/: clientExample.py
src/: client.py
src/cli/: __init__.py
src/cli-tool/: cli.py
src/core/: api.py
src/demoapi/: api.py
src/demoapi/products/: api.py
src/demoapi/todos/: api.py
src/ogcapi/: api.py
tests/: test_client.py
