[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ExtensibleAPIClient_ommanimesh"
version = "0.0.1"
authors = [
  { name="Omm Animesh Mishra", email="ommanimeshmishra@gmail.com" },
]
description = "A generic API client to interact with the OGC APIs"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
